feat: Implement BackArtistRepo and FrontArtistRepo for artist management via socket communication